--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>New Noob</h1>
-<img src="https://www.pinterest.com/pin/194710383865569621/">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRTizeamLVS4xWCjiXa5-vOGMIzej4i7VO3bfOLnrOTvWswtJRysXVP94CNGTO5jHXZVE&usqp=CAU">
 </body>
 </html>
