--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Subdomain takeover completely</title>
 </head>
 <body>
-<h1>New Noob</h1>
+<h1>Think IAS Br IAS</h1>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRTizeamLVS4xWCjiXa5-vOGMIzej4i7VO3bfOLnrOTvWswtJRysXVP94CNGTO5jHXZVE&usqp=CAU">
 </body>
 </html>
